Description: A customer VB6 application wants to get events from a Document object. The events t most likely is interested in might be Close, as the application when running against Word (and not LibreOffice as an ersatz for Word, through the magic of the COLEAT tool) seems to be able to make Word save a document when the user closes the Word window. Anyway, no way to know for sure what events are actually needed, but at least providing a match for the IID_DocumentEvents that the VB6 application wants would be a start. (Would require work in COLEAT, too, naturally; an additional entry to the samples/mso.outgoing.map file.) Note that I don't really expect anybody but myself to have any interest in or understanding of this bug; I file it mostly for work hour tracking purposes. Steps to Reproduce: . Actual Results: . Expected Results: . Reproducible: Always User Profile Reset: No Additional Info: .
Actually, now when I look closer, I see that we do have oovbaapi/ooo/vba/word/XDocumentOutgoing.idl, and in sw/source/uibase/uno/unotxdoc.cxx we do pDocShell->CallAutomationDocumentEventSinks( "Close", aArgs );. So maybe the only thing that is missing is an entry in COLEAT's samples/mso.outgoing.map. Will experiment.
Tor Lillqvist committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/+/def5287c1e77bce18d9a403527c23d754a1ada33%5E%21 tdf#123821: Correct accidental overlap with IIDs used in Calc It will be available in 6.3.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
A polite ping to Tor Lillqvist: Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing? Thanks