tdf#123821: Correct accidental overlap with IIDs used in Calc

These are used for functionality that hasn't really been tested yet,
that I added right before moving on to other things last Spring, I
guess, which is why I hadn't noticed.

Change-Id: I1df26c5dff62269315b1a7eaaf574f7e38c452f6